# cadrts

./: .env.example  .gitignore  CHANGELOG.md  Cargo.toml  README.md  ROADMAP.md  TODO.md  index.html  package-lock.json  package.json  tailwind.config.js  tsconfig.json  vite.config.ts
.github/workflows/: ci.yml  desktop-release.yml
crates/agent-core/: Cargo.toml
crates/agent-core/src/: auth.rs  config.rs  cron.rs  db.rs  lib.rs  memory.rs  paths.rs
crates/agent-core/src/agent/: cli_transport.rs  events.rs  mod.rs  remote_transport.rs  warm_transport.rs
crates/agent-server/: Cargo.toml
crates/agent-server/src/: api.rs  auth.rs  main.rs  scheduler.rs  state.rs  stream.rs  version.rs
docs/: ARCHITECTURE.md  DEPLOYMENT.md  MAC-BUILD.md  SKILLS.md  SKILL_AUTHORING.md
scripts/: deploy-lxc.sh  gen-icons.ps1  gen-skill-seed.mjs  lxc-bootstrap.sh  probe-battery.ps1
seed-skills/: accessibility-review.md  ad-copy.md  backup-plan.md  brainstorm-ideas.md  budget-analyzer.md  build-feature.md  business-plan.md  codebase-audit.md  compare-options.md  competitor-analysis.md  content-calendar.md  conversion-review.md  create-api-route.md  create-react-component.md  csv-analyzer.md  customer-persona.md  data-quality-check.md  debug-error.md  docker-compose-review.md  documentation-writer.md  executive-summary.md  explain-codebase.md  explain-simply.md  formula-builder.md  generate-tests.md  homelab-audit.md  incident-writeup.md  landing-page-critic.md  log-analyzer.md  meeting-actions.md  name-generator.md  network-troubleshooting.md  one-page-brief.md  optimize-performance.md  presentation-outline.md  pricing-strategy.md  prioritization.md  professional-email.md  project-plan.md  proposal-sow.md  (+17 more)
src/: App.tsx  styles.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: commands.rs  lib.rs  main.rs
src/components/: AuthGate.tsx  ChatPane.tsx  CodeBlock.tsx  CommandPalette.tsx  CopyButton.tsx  FileCard.tsx  InspectorPane.tsx  JobsManager.tsx  LiveActivity.tsx  Markdown.tsx  MemoryEditor.tsx  MessageItem.tsx  SessionSidebar.tsx  SettingsModal.tsx  SkillLibrary.tsx  SkillPicker.tsx  SkillsManager.tsx  StatusBar.tsx  ToastHost.tsx  ToolCallCard.tsx  UpdateBadge.tsx  WebLogin.tsx  WorkspaceBar.tsx
src/lib/: clipboard.ts  ipc.ts  openExternal.ts  prefs.ts  runtime.ts  skillLibrary.ts  store.ts  types.ts  useSmoothText.ts  uuid.ts  workspace.ts
src/lib/skills/: business.ts  coding.ts  creative.ts  data.ts  design.ts  documents.ts  index.ts  it.ts  learning.ts  productivity.ts  research.ts  types.ts  writing.ts
